<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Basic.StartingActivity"
    android:background="@drawable/start">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resumeButton"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="314dp"
        android:text="@string/new_game_play" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_above="@+id/resumeButton"
        android:layout_below="@+id/StartButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-128dp"
        android:layout_marginBottom="34dp"
        android:layout_toStartOf="@+id/StartButton"
        android:text="@string/load_game" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="173dp"
        android:layout_marginBottom="137dp"
        android:text="@string/resume" />

    <Button
        android:id="@+id/scoreboardButton"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginBottom="54dp"
        android:text="@string/scoreboard" />

</RelativeLayout>