<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Users.ResetPasswordActivity"
    android:background="@drawable/login">

    <EditText
        android:id="@+id/old_account"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="85dp"
        android:autofillHints="@string/prompt_users"
        android:ems="10"
        android:hint="@string/prompt_users"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/checkAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="119dp"
        android:text="@string/action_check_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_password" />

    <EditText
        android:id="@+id/resetPassword"
        android:layout_width="206dp"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="88dp"
        android:autofillHints="@string/prompt_new_password"
        android:ems="10"
        android:hint="@string/prompt_new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAccount" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="122dp"
        android:text="@string/action_change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="65dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="23dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toTopOf="@+id/old_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="83dp"
        android:autofillHints="@string/prompt_password"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_account" />
</android.support.constraint.ConstraintLayout>